tests/pld-test-output/tests-Init-2_fail/gcc-compile.txt
input.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 testabc
 ^~~~~~~

return code: 1
